# opencv_ws

MarkerCreater/: CMakeCache.txt  CMakeLists.txt  Makefile  MarkerCreater  MarkerCreater.cpp  cmake_install.cmake
MarkerDetect/: CMakeCache.txt  CMakeLists.txt  Makefile  MarkerDetect  MarkerDetect.cpp  cmake_install.cmake
QRScaner/: CMakeCache.txt  CMakeLists.txt  Makefile  QRScanner  QRScanner.cpp  cmake_install.cmake
matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix  Matrix.cpp  cmake_install.cmake
rect/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rect  rect.cpp
test/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
